# Truth-Agent

./: goal_for_jules.md
graph-llm-agent/: .env.sample  LICENSE  README.md  pyproject.toml
graph-llm-agent/.github/workflows/: ci.yml
graph-llm-agent/graph_llm_agent/: agent_memory.py  compaction.py  config.py  context_manager.py  embedding_client.py  llm_client.py  main.py  metacognition.py  neo4j_adapter.py  retrieval.py  uncertainty.py
graph-llm-agent/src/: agent_memory.py  compaction.py  config.py  context_manager.py  embedding_client.py  llm_client.py  main.py  memory_schema.py  metacognition.py  neo4j_adapter.py  retrieval.py  uncertainty.py
graph-llm-agent/tests/: test_compaction_length.py  test_metacognition.py  test_retrieval_scoring.py  test_uncertainty_routes.py
